app-in-apps/yaml/linkwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  selector:
    matchLabels:
      app: linkwarden
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:latest
          ports:
            - containerPort: 3000
              protocol: TCP
              name: linkwarden
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          # Mount the volume from the PVC
          volumeMounts:
            - mountPath: /data/data
              name: kubestorage
      restartPolicy: Always
      volumes:
        # Use PVC for Longhorn
        - name: kubestorage
          persistentVolumeClaim:
            claimName: linkwarden-data
