app-in-apps/yaml/linkwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-service
  namespace: linkwarden
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: linkwarden
  selector:
    app: linkwarden
  type: ClusterIP
