app-in-apps/yaml/linkwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden-ingress
  namespace: linkwarden
  labels:
    app: linkwarden
  annotations:
    kubernetes.io/ingress.class: tailscale
spec:
  ingressClassName: tailscale
  rules:
    - host: links.border-orfe.ts.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: linkwarden-service
                port:
                  number: 3000
  tls:
    - hosts:
        - links.border-orfe.ts.net
